[package]
name = "clapscan"
version = "0.1.0"
edition = "2021"
description = "Fast TCP port scanner"
license = "MIT"
authors = ["ZikaTerror"]
repository = "https://github.com/ZikaTerror/ClapScan"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "5.0" 